--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -18,6 +18,16 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading data\n",
+    "data = pd.read_csv(\"../data/data.csv\",header=0)"
+   ]
   }
  ],
  "metadata": {
