accuracy score using RFR

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1809,6 +1809,308 @@
     "count, bins, ignored = plt.hist(scaled_data, 15)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>diagnosis</th>\n",
+       "      <th>radius_mean</th>\n",
+       "      <th>texture_mean</th>\n",
+       "      <th>perimeter_mean</th>\n",
+       "      <th>area_mean</th>\n",
+       "      <th>smoothness_mean</th>\n",
+       "      <th>compactness_mean</th>\n",
+       "      <th>concavity_mean</th>\n",
+       "      <th>concave points_mean</th>\n",
+       "      <th>symmetry_mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>radius_worst</th>\n",
+       "      <th>texture_worst</th>\n",
+       "      <th>perimeter_worst</th>\n",
+       "      <th>area_worst</th>\n",
+       "      <th>smoothness_worst</th>\n",
+       "      <th>compactness_worst</th>\n",
+       "      <th>concavity_worst</th>\n",
+       "      <th>concave points_worst</th>\n",
+       "      <th>symmetry_worst</th>\n",
+       "      <th>fractal_dimension_worst</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.521037</td>\n",
+       "      <td>0.474245</td>\n",
+       "      <td>0.382648</td>\n",
+       "      <td>0.360927</td>\n",
+       "      <td>0.501849</td>\n",
+       "      <td>0.423183</td>\n",
+       "      <td>0.316195</td>\n",
+       "      <td>0.245670</td>\n",
+       "      <td>0.511834</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.33910</td>\n",
+       "      <td>0.501157</td>\n",
+       "      <td>0.328167</td>\n",
+       "      <td>0.301037</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.337155</td>\n",
+       "      <td>0.418033</td>\n",
+       "      <td>0.362807</td>\n",
+       "      <td>0.471111</td>\n",
+       "      <td>0.416101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.643144</td>\n",
+       "      <td>0.284192</td>\n",
+       "      <td>0.382648</td>\n",
+       "      <td>0.360927</td>\n",
+       "      <td>0.501849</td>\n",
+       "      <td>0.209530</td>\n",
+       "      <td>0.566937</td>\n",
+       "      <td>0.928665</td>\n",
+       "      <td>0.571006</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.33910</td>\n",
+       "      <td>0.269676</td>\n",
+       "      <td>0.328167</td>\n",
+       "      <td>0.301037</td>\n",
+       "      <td>0.244898</td>\n",
+       "      <td>0.205315</td>\n",
+       "      <td>0.473547</td>\n",
+       "      <td>0.362807</td>\n",
+       "      <td>0.364444</td>\n",
+       "      <td>0.851600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.601496</td>\n",
+       "      <td>0.902309</td>\n",
+       "      <td>0.382648</td>\n",
+       "      <td>0.360927</td>\n",
+       "      <td>0.501849</td>\n",
+       "      <td>0.423183</td>\n",
+       "      <td>0.316195</td>\n",
+       "      <td>0.245670</td>\n",
+       "      <td>0.511834</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.33910</td>\n",
+       "      <td>0.515046</td>\n",
+       "      <td>0.328167</td>\n",
+       "      <td>0.301037</td>\n",
+       "      <td>0.945578</td>\n",
+       "      <td>0.337155</td>\n",
+       "      <td>0.418033</td>\n",
+       "      <td>0.362807</td>\n",
+       "      <td>0.471111</td>\n",
+       "      <td>0.781765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.210090</td>\n",
+       "      <td>0.747780</td>\n",
+       "      <td>0.083305</td>\n",
+       "      <td>0.360927</td>\n",
+       "      <td>0.501849</td>\n",
+       "      <td>0.423183</td>\n",
+       "      <td>0.316195</td>\n",
+       "      <td>0.245670</td>\n",
+       "      <td>0.511834</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.32872</td>\n",
+       "      <td>0.627315</td>\n",
+       "      <td>0.357472</td>\n",
+       "      <td>0.092140</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.337155</td>\n",
+       "      <td>0.418033</td>\n",
+       "      <td>0.362807</td>\n",
+       "      <td>0.471111</td>\n",
+       "      <td>0.416101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.629893</td>\n",
+       "      <td>0.474245</td>\n",
+       "      <td>0.382648</td>\n",
+       "      <td>0.360927</td>\n",
+       "      <td>0.735869</td>\n",
+       "      <td>0.423183</td>\n",
+       "      <td>0.316195</td>\n",
+       "      <td>0.245670</td>\n",
+       "      <td>0.562130</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.33910</td>\n",
+       "      <td>0.501157</td>\n",
+       "      <td>0.328167</td>\n",
+       "      <td>0.301037</td>\n",
+       "      <td>0.707483</td>\n",
+       "      <td>0.301199</td>\n",
+       "      <td>0.418033</td>\n",
+       "      <td>0.362807</td>\n",
+       "      <td>0.471111</td>\n",
+       "      <td>0.258002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   diagnosis  radius_mean  texture_mean  perimeter_mean  area_mean  \\\n",
+       "0        1.0     0.521037      0.474245        0.382648   0.360927   \n",
+       "1        1.0     0.643144      0.284192        0.382648   0.360927   \n",
+       "2        1.0     0.601496      0.902309        0.382648   0.360927   \n",
+       "3        1.0     0.210090      0.747780        0.083305   0.360927   \n",
+       "4        1.0     0.629893      0.474245        0.382648   0.360927   \n",
+       "\n",
+       "   smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
+       "0         0.501849          0.423183        0.316195             0.245670   \n",
+       "1         0.501849          0.209530        0.566937             0.928665   \n",
+       "2         0.501849          0.423183        0.316195             0.245670   \n",
+       "3         0.501849          0.423183        0.316195             0.245670   \n",
+       "4         0.735869          0.423183        0.316195             0.245670   \n",
+       "\n",
+       "   symmetry_mean  ...  radius_worst  texture_worst  perimeter_worst  \\\n",
+       "0       0.511834  ...       0.33910       0.501157         0.328167   \n",
+       "1       0.571006  ...       0.33910       0.269676         0.328167   \n",
+       "2       0.511834  ...       0.33910       0.515046         0.328167   \n",
+       "3       0.511834  ...       0.32872       0.627315         0.357472   \n",
+       "4       0.562130  ...       0.33910       0.501157         0.328167   \n",
+       "\n",
+       "   area_worst  smoothness_worst  compactness_worst  concavity_worst  \\\n",
+       "0    0.301037          0.500000           0.337155         0.418033   \n",
+       "1    0.301037          0.244898           0.205315         0.473547   \n",
+       "2    0.301037          0.945578           0.337155         0.418033   \n",
+       "3    0.092140          0.500000           0.337155         0.418033   \n",
+       "4    0.301037          0.707483           0.301199         0.418033   \n",
+       "\n",
+       "   concave points_worst  symmetry_worst  fractal_dimension_worst  \n",
+       "0              0.362807        0.471111                 0.416101  \n",
+       "1              0.362807        0.364444                 0.851600  \n",
+       "2              0.362807        0.471111                 0.781765  \n",
+       "3              0.362807        0.471111                 0.416101  \n",
+       "4              0.362807        0.471111                 0.258002  \n",
+       "\n",
+       "[5 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data = scaled_data\n",
+    "new_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitting a RandomForest classifier\n",
+    "X = new_data.drop([\"diagnosis\"], axis=1)\n",
+    "y = new_data[\"diagnosis\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,test_size=0.2, random_state=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifier = RandomForestClassifier(n_estimators=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = classifier.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy Score of the random forest regressor is : 0.9210526315789473\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking accuracy score\n",
+    "print ('Accuracy Score of the random forest regressor is :',accuracy_score(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
