splitted and sampled data

--- a/notebooks/causal_models.ipynb
+++ b/notebooks/causal_models.ipynb
@@ -178,10 +178,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Splitting data\n",
+    "\n",
+    "df_train = df.head(int(0.8*len(df)))\n",
+    "df_hold = df.tail(int(0.2*len(df)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sampling data for causal analysis\n",
+    "\n",
+    "sample_20 = df_train.sample(int(0.2*len(df_train)), random_state=2)\n",
+    "sample_40 = df_train.sample(int(0.4*len(df_train)), random_state=2)\n",
+    "sample_60 = df_train.sample(int(0.6*len(df_train)), random_state=2)\n",
+    "sample_80 = df_train.sample(int(0.8*len(df_train)), random_state=2)"
+   ]
   }
  ],
  "metadata": {
