plotting causal graph

--- a/notebooks/causal_models.ipynb
+++ b/notebooks/causal_models.ipynb
@@ -21,6 +21,8 @@
     "import sys\n",
     "import warnings\n",
     "import pandas as pd\n",
+    "from causalnex.plots import plot_structure, NODE_STYLE, EDGE_STYLE\n",
+    "from IPython.display import Image\n",
     "\n",
     "sys.path.append('..')\n",
     "\n",
@@ -200,6 +202,37 @@
     "sample_40 = df_train.sample(int(0.4*len(df_train)), random_state=2)\n",
     "sample_60 = df_train.sample(int(0.6*len(df_train)), random_state=2)\n",
     "sample_80 = df_train.sample(int(0.8*len(df_train)), random_state=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating structure model for all the data fractions\n",
+    "\n",
+    "sm = from_pandas(df_train,w_threshold=0.8)\n",
+    "sm_20 = from_pandas(sample_20,w_threshold=0.8)\n",
+    "sm_40 = from_pandas(sample_40,w_threshold=0.8)\n",
+    "sm_60 = from_pandas(sample_60,w_threshold=0.8)\n",
+    "sm_80 = from_pandas(sample_80,w_threshold=0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizing the graph\n",
+    "sm.remove_edges_below_threshold(0.8)\n",
+    "viz = plot_structure(\n",
+    "    sm,\n",
+    "    graph_attributes={\"scale\": \"1.5\"},\n",
+    "    all_node_attributes=NODE_STYLE.WEAK,\n",
+    "    all_edge_attributes=EDGE_STYLE.WEAK)\n",
+    "Image(viz.draw(format='png'))"
    ]
   }
  ],
